@@ -1,8 +1,14 @@
+Mon Dec  7 17:16:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/tests/complex_idl/ComplexIDLTest.java:
+
+          Added valid_data check; prevents spurious test output.
+
 Mon Dec  7 15:51:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * java/dds/OpenDDS_jni_helpers.h:
 
-	  Fixed VC++ warnings converting from jlong to long.
+          Fixed VC++ warnings converting from jlong to long.
 
 Mon Dec  7 05:07:38 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
 
